# scaling-and-alignment

./: .gitignore  README.md  References.md  pyproject.toml
saa/: protocol.py
saa/models/: README.md  registry.py  weight_loader_registry.py
saa/trainer/: fsdp_sft_trainer.py  main_eval.py  main_generation.py  main_ppo.py
saa/utils/: megatron_utils.py  model.py  tracking.py
saa/workers/: fsdp_workers.py  megatron_workers.py
scripts/: train_tiny_zero.sh
scripts/grpo_trainer/: run_deepseek7b_llm.sh  run_deepseek7b_llm_seq_balance.sh  run_qwen2-7b.sh  run_qwen2-7b_seq_balance.sh
scripts/ppo_trainer/: run_deepseek7b_llm.sh  run_deepseek7b_llm_sp2.sh  run_deepseek_full_hh_rlhf.sh  run_deepseek_math_gsm8k_megatron.sh  run_deepseek_megatron.sh  run_gemma.sh  run_qwen2-7b.sh  run_qwen2-7b_rm.sh  run_qwen2-7b_rm_seq_balance.sh  run_qwen2-7b_seq_balance.sh  run_qwen2.5-32b.sh  verl_getting_started.ipynb
tests/e2e/: run_qwen_gsm8k_function_rm.sh  run_qwen_gsm8k_function_rm_no_rmpad.sh  run_qwen_gsm8k_model_rm.sh  run_qwen_gsm8k_model_rm_no_rmpad.sh  run_qwen_gsm8k_model_rm_seq_balance.sh  run_qwen_gsm8k_model_rm_ulysses.sh
tests/gpu_utility/: test_memory_buffers.py  test_ops.py  test_torch_functional.py
tests/model/: test_transformer.py  test_transformers_ulysses.py
tests/ray/: test_colocated_workers.py  test_data_transfer.py  test_driverfunc_to_worker.py  test_high_level_scheduling_api.py  test_ray_local_envs.py  test_rvdz.py  test_worker_group_basics.py  test_worker_group_torch.py
tests/rollout/: run_fsdp_vllm.py  test_vllm_hf_loader.py
vetrl/: protocol.py
(+117 files in other folders)
