[tool.poetry]
name = "scaling-and-alignment"
version = "0.2.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
accelerate = "^1.3.0"
codetiming = "^1.4.0"
dill = "^0.3.8"
hydra-core = "^1.3.2"
numpy = "^2.2.2"
pybind11 = "^2.13.6"
ray = "^2.41.0"
tensordict = "^0.6.2"
transformers = "^4.48.1"
torch = "^2.6.0"
datasets = "^3.2.0"
trl = "^0.14.0"
scipy = "^1.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
